# FastRAG

./: .gitignore  LICENSE  Not_working.md  README.md  pyproject.toml  requirements.txt
Project_planning/: postgres_storage_context.md  repo_context.md
fastrag/: config.py  database.py  default_page.py  main.py  models.py
fastrag/docs/: fastrag_description.md
fastrag/routes/: file_upload.py  health.py  ingest.py  query.py
fastrag/services/: bootstrap.py  document_processor.py  embeddings.py  llm.py  storage_context.py  vector_store.py
