[project]
name = "fastrag"
version = "0.1.0"
description = "FastAPI and FastUI Web Application for RAG"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi==0.103.2",
    "fastui[fastapi]==0.3.0",
    "uvicorn==0.23.2",
    "psycopg2-binary==2.9.9",
    "llama-index==0.9.3",
    "llama-index-readers-file==0.1.6",
    "llama-index-vector-stores-postgres==0.1.3",
    "llama-index-embeddings-openai==0.1.5",
    "llama-index-embeddings-ollama==0.1.2",
    "llama-index-embeddings-bedrock==0.1.3",
    "llama-index-llms-litellm==0.1.2",
    "pydantic==2.4.2",
    "PyYAML==6.0.1",
    "rich==13.6.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "pypdf==3.16.4",
    "python-docx==1.0.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/yourusername/fastrag"
Repository = "https://github.com/yourusername/fastrag.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["fastrag"]

[tool.uv]
pip = "23.3"
