[project]
name = "fastrag"
version = "0.1.0"
description = "FastAPI and FastUI Web Application for RAG"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi",
    "fastui[fastapi]",
    "uvicorn",
    "psycopg2-binary",
    "llama-index",
    "llama-index-readers-file",
    "llama-index-vector-stores-postgres",
    "llama-index-embeddings-openai",
    "llama-index-embeddings-ollama",
    "llama-index-embeddings-bedrock",
    "llama-index-llms-litellm",
    "pydantic",
    "PyYAML",
    "rich",
    "python-dotenv",
    "python-multipart",
    "pypdf",
    "python-docx",
]
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/yourusername/fastrag"
Repository = "https://github.com/yourusername/fastrag.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["fastrag"]

[tool.uv]
pip = "latest"
upgrade-strategy = "eager"

